<resources>
    <string name="app_name">QCH</string>
    <string name="Que_Como_Hoy">Que Como HOY</string>
    <string name="Articulos">Articulos</string>
    <string name="Videos">Videos</string>
    <string name="Avisos">Avisos</string>
    <string name="Recetas">Recetas</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="Registar">Registrar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Receta" >Receta</string>
    <string name="Email" >Email</string>
    <string name="Nombre" >Nombre</string>
    <string name="Rut" >Rut</string>
    <string name="DV" >Digito Verificador</string>
    <string name="FN" >Fecha Nacimiento</string>
    <string name="Agrega_Ficha" >Agrega Ficha </string>
    <string name="Movil" >Movil</string>
    <string name="Genero" >Genero</string>
    <string name="Edad" >Edad</string>
    <string name="Peso" >Peso</string>
    <string name="Estatura" >Estatura</string>
    <string name="IMC" >IMC</string>
    <string name="Guardar" >Guardar</string>
    <string name="imagen">imagen</string>
    <string name="item">Item</string>
    <string name="textview">TextView</string>
    <string name="Ficha">Ficha</string>
    <string name="titulo_del_video">Titulo del video:</string>
    <string name="tema_del_video">Tema del video:</string>
    <string name="enlace">Enlace:</string>
    <string name="nombre_de_la_receta">Nombre de la receta:</string>
    <string name="grado_de_dificultad">Grado de dificultad:</string>
    <string name="enlace_dospuntos">Enlace:</string>
    <string name="titulo_del_articulo">Titulo del articulo:</string>
    <string name="tema_del_articulo">Tema del Articulo:</string>
    <string name="dv">Dv</string>
    <string name="Test_Crash">Prueba_de_Crash</string>
    <string name="FechaFicha">Fecha de la ficha</string>

</resources>