<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".base.MainActivity">

    <ImageButton
        android:id="@+id/Recetas"
        android:layout_width="142dp"
        android:layout_height="176dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/Recetas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/Articulos"
        android:layout_width="137dp"
        android:layout_height="177dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/Articulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/Recetas"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/Videos"
        android:layout_width="142dp"
        android:layout_height="171dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Videos"
        app:layout_constraintBottom_toTopOf="@+id/registroFicha"
        app:layout_constraintEnd_toStartOf="@+id/Avisos"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recetas"
        app:layout_constraintVertical_bias="0.362"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/Avisos"
        android:layout_width="132dp"
        android:layout_height="171dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:contentDescription="@string/Avisos"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/registroFicha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Articulos"
        app:layout_constraintVertical_bias="0.377"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ToggleButton
        android:id="@+id/registroFicha"
        android:layout_width="233dp"
        android:layout_height="64dp"
        android:layout_marginBottom="88dp"
        android:text="@string/ToggleButton"
        android:textOff="@string/Registar"
        android:textOn="@string/Actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>