<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".base.vista.Ficha1Activity">

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Nombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:text="@string/Email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/rut"
        android:layout_width="75dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/Rut"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <TextView
        android:id="@+id/dv"
        android:layout_width="57dp"
        android:layout_height="29dp"
        android:layout_marginTop="28dp"
        android:text="@string/dv"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toEndOf="@+id/rut"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/movil"
        android:layout_width="173dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:text="@string/Movil"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/fechanacimiento"
        app:layout_constraintTop_toBottomOf="@+id/dv" />

    <TextView
        android:id="@+id/fechanacimiento"
        android:layout_width="169dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/FN"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rut" />

    <TextView
        android:id="@+id/genero"
        android:layout_width="107dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/Genero"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechanacimiento" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="81dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/Edad"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/peso"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <TextView
        android:id="@+id/peso"
        android:layout_width="66dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/Peso"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <TextView
        android:id="@+id/estatura"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Estatura"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/edad"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <TextView
        android:id="@+id/imc"
        android:layout_width="142dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:text="@string/IMC"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="143dp"
        android:layout_height="113dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imc"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>