<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nuevaficha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_300"
    android:orientation="vertical"
    tools:context=".base.vista.NuevaFichaActivity">

    <EditText
        android:id="@+id/nombre_fc"
        android:layout_width="239dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:textColor="#F3E5F5"
        android:textColorHint="#F3E5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_fc"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="no"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/yellow"
        android:textColorHint="#F3E5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_fc" />


    <EditText
        android:id="@+id/rut_fc"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:hint="@string/Rut"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#F3E5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_fc" />


    <EditText
        android:id="@+id/dv_fc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:hint="@string/dv"
        android:inputType="text"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="#F3E5F5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/rut_fc"
        app:layout_constraintTop_toBottomOf="@+id/email_fc" />

    <EditText
        android:id="@+id/fn_fc"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints="no"
        android:hint="@string/FN"
        android:inputType="text|date"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toEndOf="@+id/dv_fc"
        app:layout_constraintTop_toBottomOf="@+id/email_fc" />

    <EditText
        android:id="@+id/movil_fc"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:autofillHints="no"
        android:hint="@string/Movil"
        android:inputType="number|phone"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dv_fc" />

    <EditText
        android:id="@+id/genero_fc"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="no"
        android:hint="@string/Genero"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toEndOf="@+id/movil_fc"
        app:layout_constraintTop_toBottomOf="@+id/fn_fc" />


    <EditText
        android:id="@+id/edad_fc"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:hint="@string/Edad"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movil_fc" />

    <EditText
        android:id="@+id/peso_fc"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:hint="@string/Peso"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edad_fc"
        app:layout_constraintTop_toBottomOf="@+id/movil_fc" />

    <EditText
        android:id="@+id/estatura_fc"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints="no"
        android:hint="@string/Estatura"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/peso_fc"
        app:layout_constraintTop_toBottomOf="@+id/genero_fc" />

    <EditText
        android:id="@+id/imc_fc"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints="no"
        android:hint="@string/IMC"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peso_fc" />

    <Button
        android:id="@+id/save_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imc_fc"
        app:layout_constraintVertical_bias="0.027" />

</androidx.constraintlayout.widget.ConstraintLayout>
