<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewContaRec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".base.vista.PresentaRecetaActivity">

    <TextView
        android:id="@+id/tvReceta"
        android:layout_width="293dp"
        android:layout_height="62dp"
        android:layout_above="@+id/tvCaracteristica"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReceta" />

    <TextView
        android:id="@+id/textReceta"
        android:layout_width="207dp"
        android:layout_height="40dp"
        android:text="@string/nombre_de_la_receta"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnlace"
        android:layout_width="314dp"
        android:layout_height="57dp"
        android:layout_above="@+id/loading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textenlace" />

    <TextView
        android:id="@+id/textdificultad"
        android:layout_width="186dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:text="@string/grado_de_dificultad"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvReceta" />

    <TextView
        android:id="@+id/textenlace"
        android:layout_width="241dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/enlace"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaracteristica" />

    <TextView
        android:id="@+id/tvCaracteristica"
        android:layout_width="309dp"
        android:layout_height="62dp"
        android:layout_above="@+id/tvEnlace"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdificultad" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="253dp"
        android:layout_height="171dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="92dp"
        android:progressTint="#E91E63"
        android:secondaryProgressTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnlace"
        app:layout_constraintVertical_bias="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>